--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="right">
                 <div class="col-md-4">
                   
-                  <img src="/Responsive-Landing-Page-main/akaya1.jfif" class="img-fluid rounded-start" alt="...">
+                  <img src="./akaya1.png" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
