--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
             <div class="links">
               <ul>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Fotos</a></li>
-                <li><a href="#" class="btn">Curso</a></li>
+                <li><a href="https://www.instagram.com/akaya.oficial/">Instagram</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=5511971258159&text=Ol%C3%A1,%20acessei%20seu%20Link%20Personalizado%20What%27s%20Link">Contato</a></li>
+                <li><a href="/fotos.html">Fotos</a></li>
+                <li><a href="/Cadastro.html" class="btn">Curso</a></li>
               </ul>
             </div>
 
