--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <span>mas você decide onde quer chegar, seja sempre você.</span>
               </p>
               <div class="cta">
-                <a href="#" class="btn">Curso</a>
+                <a href="/Cadastro.html" class="btn">Curso</a>
               </div>
             </div>
 
@@ -76,6 +76,7 @@
             <button class="toggle-btn">
               <i class="far fa-moon"></i>
               <i class="far fa-sun"></i>
+              <a href="/Cadastro.html"></a>
             </button>
           </div>
         </div>
